@@ -30,7 +30,7 @@ local DogTag = LibStub("LibDogTag-3.0", true)
 TELLMEWHEN_VERSION = "6.0.4"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 60414 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 60415 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 61001 or TELLMEWHEN_VERSIONNUMBER < 60000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXROWS = 20
@@ -1376,7 +1376,7 @@ TMW.BE = TMW.ISMOP and {
 		-- VERIFIED 6.0.0:
 		IncreasedAP			= "57330;19506;6673",
 		IncreasedPhysHaste  = "55610;113742;30809;128432;128433",
-		IncreasedStats		= "1126;115921;20217;90363",
+		IncreasedStats		= "1126;117666;20217;90363",
 		BonusStamina		= "21562;103127;469;90364",
 		IncreasedSpellHaste = "24907;15473;51470",
 		IncreasedCrit		= "24932;1459;61316;97229;24604;90309;126373;126309;116781",
