@@ -15,6 +15,7 @@
  ** Groups should now properly show/hide as needed when you change between primary/secondary talents specializations when both specializations are the same.
  ** Condition Object Constructors are now much more reliable (at the cost of some garbage churn when running TMW:Update())
  ** Fix attempted for GroupModule_GroupPosition\Config.lua line 47: attempt to index local 'Module' (a nil value)
+ ** IncreasedStats should now properly include Legacy of the Emperor
  
 ===v6.0.3===
  * Re-implemented the stance condition for paladin seals.
